スワッガーの変更
