# api/internal/profile/handler/get_profile.go
@@ -33,7 +33,7 @@ type ErrorResponse struct {
 // @Description ログインユーザーのプロフィール取得
 // @Tags profile
 // @Produce json
-// @Success 200 {object} ProfileJSON
+// @Success 200 {object} profile_handler.ProfileJSON
 // @Failure 401 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
 // @Security BearerAuth
